--- a/src/app/components/audio-player/audio-player.component.css
+++ b/src/app/components/audio-player/audio-player.component.css
@@ -209,9 +209,54 @@ h2 {
   margin-top: 20px;
   text-align: center;
 }
+h1{
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+  color: #1E88E5;
+  text-align: center;
+
+}
 
 .success-message mat-card {
   color: #fff;
   background-color: #1E88E5;
   padding: 10px;
+}
+.card {
+  padding: 20px;
+  margin: 20px auto;
+  width: 100%;
+  max-width: 600px;
+  border: 1px solid #ddd;
+  border-radius: 12px;
+  background-color: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.input-group {
+  display: flex;
+  gap: 20px;
+}
+
+.mat-form-field {
+  flex: 1;
+}
+
+button {
+  margin-top: 20px;
+  width: 100%;
+}
+
+.progress-container {
+  margin-top: 20px;
+}
+
+.message {
+  margin-top: 20px;
+  text-align: center;
+}
+
+mat-progress-bar {
+  width: 100%;
 }
